# JHTTP-Server

./: .gitignore  CMakeLists.txt  HttpMethod.h  README.md  Request.cpp  Request.h  Router.cpp  Router.h  ThreadManager.cpp  ThreadManager.h  main.cpp
include/: BodyParserFactory.h  HttpParser.h  HttpServer.h  IBodyParser.h  JsonBodyParser.h  Request.h  Response.h  ResponseGenerator.h  ResponseProcessor.h  Router.h  XmlBodyParser.h  routings.h
src/: BodyParserFactory.cpp  HttpParser.cpp  HttpServer.cpp  JsonBodyParser.cpp  Request.cpp  Response.cpp  ResponseGenerator.cpp  ResponseProcessor.cpp  Router.cpp  ThreadManager.cpp  XmlBodyParser.cpp  main.cpp  routings.cpp
